feature: Spring 3.x upgrade